apps/portfolio/service.yaml
# Service portfolio
# =================
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
